# bugtracker

./: .env.example  .gitattributes  .gitignore  BUGFLOW_PRD.md  DEPLOY_HF_SPACE.md  DEPLOY_QUICK.md  DEPLOY_WITH_MODELS.md  KEEP_ALIVE_SETUP.md  MODEL_STORAGE.md  README.md  START_BUGFLOW.sh  clean_git_history.sh  create_sample_data.py  download_models.py  fine_tune_bert.py  init_db.sql  init_db_cloud.py  init_users.py  migrate_db.py  predict_bug.py  preprocess_dataset.py  pyproject.toml  render.yaml  report_bugs.py  requirements.txt  reset_passwords.py  run.sh  run_app.sh  start.sh  start_bugflow.sh  test_mlops.py  train_deduplication.py  train_severity_fast.py  train_severity_model.py  train_team_90plus.py  train_team_fast.py  upload_hf_space.py  upload_to_huggingface.py
.streamlit/: secrets.toml
app/: auth.py  config.py  database.py  database_cloud.py  fallback_predictions.py  main.py  ml_model.py  models.py  notifications.py  schemas.py
docs/stories/: brownfield-master-analysis.md  brownfield-ui-ux-mlops-fix.md
documentation/: DEEP_KNOWLEDGE.md  FILE_GUIDE.md  PROJECT_DOCUMENTATION.md
frontend/: README.md  app.py  requirements.txt
frontend/.streamlit/: config.toml
hf_space/: Dockerfile  README.md  app.py  requirements.txt
severity_model_trained_final/: config.json  label_map.json  metrics.json
team_model_trained_final/: config.json  label_map.json  metrics.json
